fixed invisible phone num

--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,7 @@ body{
     padding-top: 15px;
     font-weight: 100;
     padding-bottom: 40px;
+    color: white;
 }
 
 .pad-title{
